# poly-btc

./: .env.example  README.md  pyproject.toml
src/api/: app.py
src/backtest/: evaluator.py  fill_model.py  replay.py  reports.py
src/collector/: gamma_client.py  polymarket_market_ws.py  polymarket_rtds_ws.py  recorder.py
src/config/: settings.py
src/live/: order_interface.py  paper_engine.py  signal_loop.py
src/modeling/: baseline_z.py  calibrators.py  lgbm_model.py  logistic_model.py  registry.py
src/pipeline/: build_features.py  build_labels.py  build_snapshots.py  normalize_events.py
src/schemas/: decisions.py  features.py  fills.py  labels.py  raw_events.py  snapshots.py
src/strategy/: continuation_router.py  hedge_simulator.py  legacy_feature_extractors.py  risk_rules.py  sizing.py
src/utils/: math.py
tests/: conftest.py  test_backtest_fills.py  test_feature_builder.py  test_no_lookahead.py  test_router.py  test_snapshot_builder.py
