[project]
name = "poly-btc"
version = "0.1.0"
description = "BTC 5m tail probability research engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8",
  "pydantic-settings>=2.3",
  "polars>=1.6",
  "duckdb>=1.0",
  "numpy>=1.26",
  "scipy>=1.13",
  "scikit-learn>=1.5",
  "lightgbm>=4.5",
  "websockets>=13.0",
  "httpx>=0.27",
  "orjson>=3.10",
  "fastapi>=0.112",
  "uvicorn>=0.30",
  "typer>=0.12",
  "rich>=13.7",
  "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "mypy>=1.11",
  "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "N", "W"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
exclude = ["notebooks"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
